--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer>
-  <div class="container">
-    <p>Copyright © 2020-20XX LOCAR INFO TOURISM.co.,ltd</p> 
-  </div>
+  
+    <p class="footer-text">Copyright © 2020-20XX LOCAR INFO TOURISM.co.,ltd</p> 
+  
 </footer>
