--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,23 +8,31 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <script src="https://kit.fontawesome.com/b5fa4724ff.js" crossorigin="anonymous"></script>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="stylesheet" href="skippr.scss">
+    <link rel="stylesheet" href="application.scss">
   </head>
 
   <body>
-    <div class="wrapper">
+
     <%= render partial: 'layouts/header' %>
     
-    <div class="content">
-      <div class="container">
-        <div class="row">
-          <%= render partial: 'layouts/flash' %>
-        </div>
-        <%= yield %>
+    
+      <div class="flash">
+      <%= render partial: 'layouts/flash' %>
       </div>
-    </div>
+        
+        
+        <%= yield %>
+      
+    
 
     <%= render partial: 'layouts/footer' %>
     
     </div>
+
+    <script src="javascripts/jquery.min.js"></script>
+    <script src="javascripts/skippr.min.js"></script>
+    <script src="javascripts/script.js"></script>
+
   </body>
 </html>
