--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,3 +1,5 @@
+<div class="container">
+
 <% notifications = @notifications.where.not(visitor_id: current_user.id) %>
 
   <h3 class="text-center">〜通知〜</h3>
@@ -9,3 +11,5 @@
 <% else %>
   <p>通知はありません</p>
 <% end %>
+
+</div>
