--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="col-xs-3"></div>
 <div class="col-xs-6">
 
@@ -51,5 +52,7 @@
   <% end %>
   
   <%= link_to "戻る", post_path(@post) %>
+
+</div>
 
 </div>
