--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -1,3 +1,5 @@
+<div class="container"> 
+
 <% if @model == 'user' %>
   <h3>Users search for '<%= @content %>' </h3>
   <%= render 'users/index' , users: @records %>
@@ -8,3 +10,5 @@
   <h3>Prefectures search for '<%= @content %>' </h3>
   <%= render 'posts/index' , posts: @records %>
 <% end %> 
+
+</div>
