--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,4 @@
-<%= render 'users/index' , users: @users %>
-
+<div class="container">
 <div class="col-xs-4">
   <div class="box2">
     <div class="box-title">人気投稿ランキング</div>
@@ -14,4 +13,8 @@
       <% end %>
     </div>
   </div>
+</div>
+
+<%= render 'users/index' , users: @users %>
+
 </div>
