--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -1,29 +1,38 @@
-<% posts.each do |post| %>
 
-  <div class="col-xs-8">
+<div class="col-xs-8">
+  <% posts.each do |post| %>
     <div class="box1">
       <table style="border:none;">
         <tr>
           <td>
+            <%= attachment_image_tag post.user, :profile_image, :fill, 150, 100, format: 'jpg', fallback: "no_image.jpg" %>
+          </td>
+        <tr>
+        <tr>
+          <td>投稿者：
             <i class="fas fa-user"></i>
             <%= post.user.name %>
           </td>
         </tr>
         <tr>
-          <td><%= attachment_image_tag post.user, :profile_image, :fill, 100, 100, format: 'jpg', fallback: "no_image.jpg" %></td>
-        </tr>
-        <tr>
-          <td>
+          <td>タイトル：
             <%= link_to post_path(post) do %>
               <%= post.title %>
             <% end %>
           </td>
         </tr>
         <tr>
-          <td><%= post.prefecture %></td>
+          <td>場所：
+            <%= post.prefecture %></td>
+          </td>
+        </tr>
+        </tr>
+        </tr>
+        <tr>
         </tr>
         <tr>
           <td>
+            目的：
             <% post.categories.each do |category| %>
               <%= category.name %>
             <% end %>
@@ -35,7 +44,6 @@
             <!--4.gsub()で正規表現に合致する箇所を空欄にする-->
               <%= simple_format(post.body.gsub!(/[#＃][\w\p{Han}ぁ-ヶｦ-ﾟー]+/, "")) %>
             <!--4.postにタグがあればタグを出力する-->
-            </div>
             <% if post.hashtags.any? %>
               <% post.hashtags.each do |hashtag| %>
                 <%= link_to hashtag_path(post,hashname: hashtag.hashname) do %>
@@ -43,13 +51,14 @@
                 <% end %>
               <% end %>
             <% end %>
+            </div>
           </td>
         </tr>
         <tr>
           <td>
 		        <% if post.post_images.present? %>
               <% post.post_images.each do |image| %>
-                <%= attachment_image_tag image, :image, :fill, 150, 150 %>
+                <%= attachment_image_tag image, :image, :fill, 700, 400 %>
               <% end %>
             <% end %>
 	        </td>
@@ -82,6 +91,5 @@
         </tr>
       </table>
     </div>
-  </div>
-
-<% end %>
+  <% end %>
+</div>
