--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'posts/index' , posts: @posts %>
+<div class="container">
 
 <div class="col-xs-4">
   <div class="box2">
@@ -29,6 +29,7 @@
   </div>
 </div>
 
+<%= render 'posts/index' , posts: @posts %>
 
 <div class="new-post-form">
   <%= link_to new_post_path do %>
@@ -36,4 +37,6 @@
     <i class="fas fa-plus-circle fa-3x"></i>
     </p>
   <% end %>
+</div>
+
 </div>
