--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,5 @@
+<div class="container">
+
 <div class="col-xs-3"></div>
 <div class="col-xs-6">
 
@@ -49,5 +51,7 @@
       <%= f.submit "投稿", class: "btn btn-primary btn-block" %>
     </div>
   <% end %>
+
+</div>
 
 </div>
