--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="col-xs-4"></div>
 <div class="col-xs-4">
 
@@ -37,5 +38,7 @@
   <% end %>
 
   <%= link_to "戻る", user_path(@user) %>
+
+</div>
 
 </div>
